# my-wayland-client

./: .gitattributes  CMakeLists.txt  Dockerfile  README.md  docker_run.sh
docs/: overview.pu
src/: main.cpp  primitive.cpp
